--- a/lifestyle.html
+++ b/lifestyle.html
@@ -25,6 +25,7 @@
         <p>Discover the latest trends and tips on living a healthy and fulfilling lifestyle.</p>
         
         <section class="latest-articles">
+            <h2>Read This Articles Now:</h2>
             <div class="articles-grid">
                 <!-- Article 1: Protein-Rich Breakfast Ideas -->
                 <article class="article-card">
@@ -35,7 +36,7 @@
                     <h2>Protein-Rich Breakfast Ideas</h2>
                     <p>Start your day right with these nutritious and delicious breakfast recipes.</p>
                     <div class="meta">
-                        <span class="date">2024-01-13</span>
+                        <span class="date">2025-01-13</span>
                         <a href="/articles/healthy-breakfast.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -49,7 +50,7 @@
                     <h2>Healthy Living Tips</h2>
                     <p>Small changes in your daily routine can make a huge impact on your health.</p>
                     <div class="meta">
-                        <span class="date">2024-01-10</span>
+                        <span class="date">2025-01-10</span>
                         <a href="/articles/healthy-living.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -63,7 +64,7 @@
                     <h2>Self-Improvement Strategies</h2>
                     <p>Effective methods to enhance your personal growth and mindset.</p>
                     <div class="meta">
-                        <span class="date">2024-01-08</span>
+                        <span class="date">2025-01-08</span>
                         <a href="/articles/self-improvement.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -77,7 +78,7 @@
                     <h2>Must-Read Books for Everyone</h2>
                     <p>Discover books that can broaden your horizons and enrich your life.</p>
                     <div class="meta">
-                        <span class="date">2024-01-07</span>
+                        <span class="date">2025-01-07</span>
                         <a href="/articles/must-read-books.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -91,7 +92,7 @@
                     <h2>Car News and Trends</h2>
                     <p>Explore the latest developments in the automotive world.</p>
                     <div class="meta">
-                        <span class="date">2024-01-05</span>
+                        <span class="date">2025-01-05</span>
                         <a href="/articles/car-news.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -105,7 +106,7 @@
                     <h2>Fashion Trends This Year</h2>
                     <p>Stay ahead of the curve with these stylish trends for the upcoming season.</p>
                     <div class="meta">
-                        <span class="date">2024-01-04</span>
+                        <span class="date">2025-01-04</span>
                         <a href="/articles/fashion-trends.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -119,7 +120,7 @@
                     <h2>Best Travel Destinations</h2>
                     <p>Plan your next vacation with these incredible travel spots around the world.</p>
                     <div class="meta">
-                        <span class="date">2024-01-03</span>
+                        <span class="date">2025-01-03</span>
                         <a href="/articles/travel-destinations.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -133,7 +134,7 @@
                     <h2>Yoga for Mental and Physical Health</h2>
                     <p>Learn how yoga can improve both your body and mind.</p>
                     <div class="meta">
-                        <span class="date">2024-01-02</span>
+                        <span class="date">2025-01-02</span>
                         <a href="/articles/yoga-health.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -147,7 +148,7 @@
                     <h2>Nutrition for a Balanced Diet</h2>
                     <p>How to maintain a healthy diet with essential nutrients for overall well-being.</p>
                     <div class="meta">
-                        <span class="date">2024-01-01</span>
+                        <span class="date">2025-01-01</span>
                         <a href="/articles/nutrition-diet.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -156,7 +157,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 TechLife Blog. All rights reserved.</p>
+        <p>&copy; 2025
+             TechLife Blog. All rights reserved.</p>
     </footer>
 </body>
 </html>
