--- a/tech.html
+++ b/tech.html
@@ -25,7 +25,7 @@
         <p>Explore the latest articles about technology.</p>
 
         <section class="latest-articles">
-            <h2>Latest Articles</h2>
+            <h2>Read This Articles Now:</h2>
             <div class="articles-grid">
                 <!-- Card 1 -->
                 <article class="article-card">
@@ -36,7 +36,7 @@
                     <h2>Understanding Cybersecurity Basics</h2>
                     <p>Learn the fundamentals of cybersecurity and how to protect yourself online.</p>
                     <div class="meta">
-                        <span class="date">2024-01-15</span>
+                        <span class="date">2025-01-15</span>
                         <a href="articles/cybersecurity-basics.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -50,7 +50,7 @@
                     <h2>Exploring AI and Machine Learning</h2>
                     <p>An introduction to artificial intelligence and how machine learning is transforming industries.</p>
                     <div class="meta">
-                        <span class="date">2024-01-10</span>
+                        <span class="date">2025-01-10</span>
                         <a href="/articles/ai-machine-learning.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -64,7 +64,7 @@
                     <h2>The Future of Cloud Computing</h2>
                     <p>What does the future hold for cloud computing and how will it impact businesses and consumers?</p>
                     <div class="meta">
-                        <span class="date">2024-01-07</span>
+                        <span class="date">2025-01-07</span>
                         <a href="/articles/future-of-cloud-computing.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -78,7 +78,7 @@
                     <h2>5G Network Technology</h2>
                     <p>Explore the transformative power of 5G networks and their impact on communication technology.</p>
                     <div class="meta">
-                        <span class="date">2024-01-05</span>
+                        <span class="date">2025-01-05</span>
                         <a href="/articles/5g-network-technology.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -92,7 +92,7 @@
                     <h2>The Role of Blockchain in Security</h2>
                     <p>Understanding how blockchain technology can revolutionize digital security and data protection.</p>
                     <div class="meta">
-                        <span class="date">2024-01-03</span>
+                        <span class="date">2025-01-03</span>
                         <a href="/articles/blockchain-security.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -106,7 +106,7 @@
                     <h2>Robotic Process Automation</h2>
                     <p>How robotic process automation is reshaping the business landscape and streamlining operations.</p>
                     <div class="meta">
-                        <span class="date">2024-01-01</span>
+                        <span class="date">2025-01-01</span>
                         <a href="/articles/robotic-process-automation.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -120,7 +120,7 @@
                     <h2>Data Privacy in the Digital Age</h2>
                     <p>Explore the challenges and solutions to data privacy in a constantly connected world.</p>
                     <div class="meta">
-                        <span class="date">2023-12-28</span>
+                        <span class="date">2024-12-28</span>
                         <a href="/articles/data-privacy-digital-age.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -134,7 +134,7 @@
                     <h2>Quantum Computing Breakthroughs</h2>
                     <p>Discover the latest advancements in quantum computing and its potential to revolutionize technology.</p>
                     <div class="meta">
-                        <span class="date">2023-12-25</span>
+                        <span class="date">2024-12-25</span>
                         <a href="/articles/quantum-computing.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -148,7 +148,7 @@
                     <h2>Smart Home Technology</h2>
                     <p>How smart home devices are changing the way we live and interact with technology.</p>
                     <div class="meta">
-                        <span class="date">2023-12-20</span>
+                        <span class="date">2024-12-20</span>
                         <a href="/articles/smart-home-technology.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -158,7 +158,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 TechLife Blog. All rights reserved.</p>
+        <p>&copy; 2025 TechLife Blog. All rights reserved.</p>
     </footer>
 </body>
 </html>
