--- a/sports.html
+++ b/sports.html
@@ -25,7 +25,7 @@
         <p>Discover the latest sports news and analysis.</p>
 
         <section class="latest-articles">
-            <h2>Latest Sports Articles</h2>
+            <h2>Read This Articles Now:</h2>
             <div class="articles-grid">
                 <!-- Article 1 -->
                 <article class="article-card">
@@ -36,7 +36,7 @@
                     <h2>NHL Season Highlights</h2>
                     <p>A recap of the most exciting moments from this NHL season.</p>
                     <div class="meta">
-                        <span class="date">2024-01-14</span>
+                        <span class="date">2025-01-14</span>
                         <a href="/articles/nhl-highlights.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -49,12 +49,11 @@
                     <h2>Latest UFC Championship Analysis</h2>
                     <p>Breaking down the strategies and highlights from the recent UFC championship.</p>
                     <div class="meta">
-                        <span class="date">2024-01-12</span>
+                        <span class="date">2025-01-12</span>
                         <a href="/articles/ufc-championship.html" class="read-more">Read More →</a>
                     </div>
                 </article>
                 
-                <!-- Add 7 more sports articles below in the same structure -->
                 <!-- Article 3 -->
                 <article class="article-card">
                     <div class="article-image">
@@ -64,7 +63,7 @@
                     <h2>Upcoming World Cup Predictions</h2>
                     <p>Experts weigh in on the teams to watch in the upcoming World Cup.</p>
                     <div class="meta">
-                        <span class="date">2024-01-11</span>
+                        <span class="date">2025-01-11</span>
                         <a href="/articles/world-cup-predictions.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -77,7 +76,7 @@
                     <h2>One of Real Madrid's 'greatest players' - announces retirement </h2>
                     <p>One of Madrid's greatest players - Toni Kroos announces his retirement.</p>
                     <div class="meta">
-                        <span class="date">2024-01-10</span>
+                        <span class="date">2025-01-10</span>
                         <a href="/articles/football-legend-retirement.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -90,7 +89,7 @@
                     <h2>Tennis Grand Slam Results</h2>
                     <p>The most recent grand slam results and what they mean for the rankings.</p>
                     <div class="meta">
-                        <span class="date">2024-01-09</span>
+                        <span class="date">2025-01-09</span>
                         <a href="/articles/tennis-grand-slam-results.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -103,7 +102,7 @@
                     <h2>Basketball Playoffs Analysis</h2>
                     <p>An in-depth look at the current basketball playoffs and the teams leading the charge.</p>
                     <div class="meta">
-                        <span class="date">2024-01-08</span>
+                        <span class="date">2025-01-08</span>
                         <a href="/articles/basketball-playoffs.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -116,7 +115,7 @@
                     <h2>The Evolution of Sports Equipment</h2>
                     <p>A look at how sports equipment has evolved over the decades.</p>
                     <div class="meta">
-                        <span class="date">2024-01-07</span>
+                        <span class="date">2025-01-07</span>
                         <a href="/articles/evolution-sports-equipment.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -129,7 +128,7 @@
                     <h2>Best Sports Moments of 2024</h2>
                     <p>A recap of the best sports moments from this year.</p>
                     <div class="meta">
-                        <span class="date">2024-01-06</span>
+                        <span class="date">2025-01-06</span>
                         <a href="/articles/best-sports-moments-2024.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -142,7 +141,7 @@
                     <h2>Sports Nutrition: What You Need to Know</h2>
                     <p>Tips and advice on maintaining proper nutrition for athletes.</p>
                     <div class="meta">
-                        <span class="date">2024-01-05</span>
+                        <span class="date">2025-01-05</span>
                         <a href="/articles/sports-nutrition.html" class="read-more">Read More →</a>
                     </div>
                 </article>
@@ -151,7 +150,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 TechLife Blog. All rights reserved.</p>
+        <p>&copy; 2025 TechLife Blog. All rights reserved.</p>
     </footer>
 </body>
 </html>
